threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/event_flags_set_notify/test000005.exec.err
Error: external call with symbolic argument: _txm_module_manager_inside_data_check
File: threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h
Line: 926
assembly.ll line: 11194
State: 4
Stack: 
	#000011194 in _txm_module_manager_tx_event_flags_set_notify_dispatch(module_instance=symbolic, param_0=symbolic, param_1=0) at threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h:926
	#100007107 in _txm_module_manager_kernel_dispatch(kernel_request=24, param_0=symbolic, param_1=0, param_2=0) at threadx/threadx/common_modules/module_manager/src/txm_module_manager_kernel_dispatch.c:303
	#200000243 in m_txe_event_flags_set_notify(group_ptr=symbolic, events_set_notify=0) at threadx/threadx/common_modules/module_lib/src/txm_event_flags_set_notify.c:75
	#300000208 in main() at evaluation_files/event_flags_set_notify.c:70
