threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/event_flags_set_notify/test000005.kquery
array [2312] : w32 -> w8 = symbolic
array _tx_thread_current_ptr[8] : w32 -> w8 = symbolic
array alloc3[432] : w32 -> w8 = symbolic
(query [(Eq 94743232891968
             (ReadLSB w64 0 _tx_thread_current_ptr))
         (Eq 94743208599040
             (ReadLSB w64 264 alloc3))
         (Eq false
             (Eq 0
                 (And w64 (ReadLSB w64 24 )
                          2)))]
        false)
